maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: ')' expected but ';' found.
    	gauche();
                ^